# django-shapefileimport

./: .gitignore  MANIFEST.in  Pipfile  README.md  setup.cfg
shapefileimport/: admin.py  apps.py  models.py  shapetasks.py
shapeimport/: admin.py  apps.py  models.py  shapetasks.py
