[metadata]
name = django-shapefileimport
version = 0.1.4
description = Django APP to automate GeoDjango shapefile importations and management without affecting migrations.
long_description = file: README.md
url = https://github.com/Rodrigo-NH/django-shapefileimport
author = Rodrigo Nascimento Hernandez
author_email = rodrigomdev@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: GIS
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
